# deltachess

./: Dockerfile  docker-compose.yml
chess/: Cargo.toml
chess/src/: main.rs
client/: Dockerfile  nginx.conf  package.json
client/public/: index.html
client/src/: App.svelte  App.test.tsx  App.tsx  index.tsx
client/src/components/: Board.svelte  ChessBoard.svelte  ChessBoard.tsx  ChessboardD3 copy.svelte  ControlBox.tsx
client/src/styles/: App.scss
client/src/types/: Chessboard.types.ts
client_ng/: .eslintrc.cjs  Dockerfile  package.json
client_ng/src/: stores.ts
client_ng/src/routes/: index.svelte
nginx/: Dockerfile  nginx.conf
reverse_proxy/: nginx.conf
server/: Cargo.toml  Dockerfile
server/src/: main.rs
server/src/graphql/: mod.rs  routes.rs  schema.rs
