[package]
name = "deltachess-backend"
version = "0.1.0"
authors = ["ananas-dev <lucienfiorini@protonmail.com>"]
edition = "2018"

[dependencies]
actix = "0.11"
actix-web = "3"
actix-cors = "0.5"
actix-session = "0.4"
serde = "1.0"
env_logger = "0.8"
juniper = "0.15.3"
juniper_actix = "0.2"
mongodb = "1.2"
